@@ -7,6 +7,7 @@ Changelog for pdoTools.
 - Improved method pdoTools::fastProcess().
 - Improved method pdoTools::makePlaceholders().
 - Accelerated snippet pdoNeighbors.
+- Added pdoParser.
 
 1.8.9 pl4
 ==============
